develop ajustes em perfil de acesso, pendente ainda tratativa por igreja